# standard-tooling

./: .gitignore  .hadolint.yaml  .trivyignore  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  cliff-release-notes.toml  cliff.toml  pyproject.toml  standard-tooling.toml  versions.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: add-to-project.yml  ci-push.yml  ci.yml  docker-publish.yml  docs.yml  publish.yml  verify-docker-images.yml
1.2/: 404.html  index.html
1.2/changelog/: index.html
1.2/getting-started/: index.html
1.2/search/: search_index.json
1.3/: index.html
1.3/changelog/: index.html
1.3/getting-started/: index.html
1.3/reference/: index.html
1.3/releases/: index.html
1.3/search/: search_index.json
1.4/: 404.html  index.html
1.4/changelog/: index.html
1.4/getting-started/: index.html
1.4/reference/: index.html
1.4/releases/: index.html
1.4/search/: search_index.json
dev/: 404.html  index.html
dev/changelog/: index.html
dev/getting-started/: index.html
dev/reference/: index.html
dev/releases/: index.html
dev/search/: search_index.json
docker/: build.sh
docker/go/: Dockerfile
docker/java/: Dockerfile
docker/python/: Dockerfile
docker/ruby/: Dockerfile
docker/rust/: Dockerfile
docs/: git-hooks-and-validation.md  repository-standards.md
docs/plans/: 2026-05-03-363-cross-repo-cleanup.md  2026-05-03-markdownlint-standardization.md  README.md  decouple-st-from-images-plan.md  host-level-tool-plan.md  standard-tooling-toml-plan.md  uv-tool-install-and-guard-cleanup-plan.md  worktree-convention-plan.md
docs/site/: mkdocs.yml
docs/site/docs/: index.md  (+1 more)
docs/specs/: 2026-04-30-uv-tool-install-and-guard-cleanup-design.md  2026-05-03-markdownlint-standardization-design.md  decouple-st-from-images-plan.md  git-url-dev-dependency.md  host-level-tool.md  standard-tooling-toml.md  worktree-convention.md
paad/alignment-reviews/: 2026-04-22-worktree-convention-alignment.md  2026-04-25-host-level-tool-alignment.md  2026-04-29-standard-tooling-toml-alignment.md  2026-05-03-markdownlint-standardization-alignment.md
paad/pushback-reviews/: 2026-04-22-worktree-convention-pushback.md  2026-04-24-git-url-dev-dependency-pushback.md  2026-04-24-host-level-tool-pushback.md  2026-04-29-decouple-st-from-images-pushback.md  2026-04-29-standard-tooling-toml-pushback.md  2026-05-01-uv-tool-install-and-guard-cleanup-pushback.md  2026-05-03-markdownlint-standardization-pushback.md
releases/: .markdownlint.json  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.2.1.md  v1.2.2.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md  v1.3.4.md  v1.3.5.md  v1.4.0.md  v1.4.1.md  v1.4.10.md  v1.4.11.md  v1.4.12.md  v1.4.13.md  v1.4.2.md  v1.4.3.md  v1.4.4.md  v1.4.5.md  v1.4.6.md  v1.4.7.md  v1.4.8.md  v1.4.9.md
scripts/dev/: audit.sh  commit.sh  finalize_repo.sh  lint.sh  prepare_release.py  submit-pr.sh  sync-tooling.sh  test.sh  typecheck.sh  validate_local.sh  validate_local_common.sh  validate_local_go.sh  validate_local_java.sh  validate_local_python.sh
scripts/gh/: ensure-label.sh  list-project-repos.sh  set-project-field.sh
scripts/git-hooks/: commit-msg  pre-commit
scripts/lint/: co-author.sh  commit-message.sh  commit-messages.sh  markdown-standards.sh  pr-issue-linkage.sh  repo-profile.sh
src/standard_tooling/: __init__.py
tests/standard_tooling/: test_check_pr_merge.py  test_commit.py  test_config.py  test_docker.py  test_docker_cache.py  test_docker_cache_cli.py  test_docker_docs.py  test_docker_run.py  test_docker_test.py  test_ensure_label.py  test_finalize_repo.py  test_generate_commands.py  test_git.py  test_github.py  test_labels.py  test_list_project_repos.py  test_markdown_standards.py  test_merge_when_green.py  test_observatory.py  test_observatory_lib.py  test_pr_issue_linkage.py  test_pre_commit_gate.py  test_pre_commit_hook.py  test_prepare_release.py  test_registry.py  test_release.py  test_repo_profile.py  test_repo_profile_cli.py  test_set_project_field.py  test_submit_pr.py  test_validate_local.py  test_validate_local_common.py  test_validate_local_common_container.py  test_validate_local_lang.py  test_wait_until_green.py
(+165 files in other folders)
