[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standard-tooling"
version = "1.4.4"
description = "Shared development tooling for managed repositories"
requires-python = ">=3.12,<4.0"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dependencies = []

[project.scripts]
st-check-pr-merge = "standard_tooling.bin.check_pr_merge:main"
st-commit = "standard_tooling.bin.commit:main"
st-submit-pr = "standard_tooling.bin.submit_pr:main"
st-merge-when-green = "standard_tooling.bin.merge_when_green:main"
st-wait-until-green = "standard_tooling.bin.wait_until_green:main"
st-prepare-release = "standard_tooling.bin.prepare_release:main"
st-finalize-repo = "standard_tooling.bin.finalize_repo:main"
st-validate-local = "standard_tooling.bin.validate_local:main"
st-ensure-label = "standard_tooling.bin.ensure_label:main"
st-generate-commands = "standard_tooling.bin.generate_commands:main"
st-docker-run = "standard_tooling.bin.docker_run:main"
st-docker-cache = "standard_tooling.bin.docker_cache:main"
st-docker-test = "standard_tooling.bin.docker_test:main"
st-docker-docs = "standard_tooling.bin.docker_docs:main"
st-repo-profile = "standard_tooling.bin.repo_profile_cli:main"
st-validate-local-python = "standard_tooling.bin.validate_local_lang:main"
st-validate-local-rust = "standard_tooling.bin.validate_local_lang:main"
st-validate-local-go = "standard_tooling.bin.validate_local_lang:main"
st-validate-local-java = "standard_tooling.bin.validate_local_lang:main"
st-validate-local-common = "standard_tooling.bin.validate_local_common:main"
st-validate-local-common-container = "standard_tooling.bin.validate_local_common_container:main"
st-markdown-standards = "standard_tooling.bin.markdown_standards:main"
st-pr-issue-linkage = "standard_tooling.bin.pr_issue_linkage:main"

[dependency-groups]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "pip-audit", "pip-licenses"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
standard_tooling = ["data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH", "ARG", "PTH", "ERA"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
